# feather-ai

./: .gitignore  README.md  pyproject.toml
research/: streaming_test.py  test_agent.py
research/rag_docling/: bafög_antwort.docx  chunk_visualizer.py  idea.md  output.json  pdf_processor.py  pdf_processor_selfwritten.py  research.py
research/rag_docling/.kreuzberg/mime/: a1ed3dbece6b2025.msgpack
src/feather-ai/: agent.py
src/feather_ai/: __init__.py  _provider.py  _response.py  agent.py  prompt.py  utils.py
src/feather_ai/agents/: agent.py
src/feather_ai/internal_utils/: _exceptions.py  _multimodal.py  _provider.py  _response.py  _tools.py
src/feather_ai/tools/: __init__.py  media.py  media_async.py  web.py
src/feather_ai/types/: response.py
src/feather_ai/utils/: _exceptions.py  _provider.py  _response.py  _tools.py  _tracing.py
tests/: benchmark_tool_calls.py  image_creation_research.py  requirements.txt  test_agent.py  test_instructions.txt
tests/test_docs/: text_file.txt
