[project]
name = "feather-ai"
version = "0.1.0"
description = "The lightest Agentic AI Framework you'll ever see"
authors = [{ name = "Luca Bozzetti" }]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain-anthropic>=1.1.0",
    "langchain-mistralai>=1.0.1"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"